--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>سیستم مسابقات فوتسال</title>
+
   <style>
     body {
       font-family: "Vazir", sans-serif;
@@ -53,7 +54,7 @@
       display: block;
     }
 
-    /* ------------------- جدول‌های مدرن ------------------- */
+    /* ------------------- جدول مدرن ------------------- */
     table.modern-table {
       margin: 25px auto;
       width: 95%;
@@ -81,8 +82,8 @@
       background: #f5f7ff;
     }
 
-    /* ------------------- کارت‌ها ------------------- */
-    .card-container {
+    /* ------------------- کارت تیم‌ها ------------------- */
+    .team-card-container {
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
@@ -91,92 +92,45 @@
       max-width: 1000px;
     }
 
-    .card {
+    .team-card {
       background: #ffffff;
       border-radius: 14px;
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-      width: 280px;
+      width: 260px;
       padding: 18px;
       text-align: center;
       transition: all 0.3s ease;
     }
 
-    .card:hover {
+    .team-card:hover {
       transform: translateY(-5px);
       box-shadow: 0 8px 15px rgba(0, 0, 0, 0.15);
     }
 
-    .teams {
+    .team-name {
       font-size: 18px;
       font-weight: bold;
       color: #3f51b5;
-      margin-bottom: 8px;
+      margin-bottom: 6px;
     }
 
-    .divider {
-      font-size: 20px;
-      margin: 0 6px;
-      color: #444;
-    }
-
-    .match-info, .result-info {
+    .team-leader {
       font-size: 14px;
+      color: #444;
+      margin-bottom: 10px;
+    }
+
+    .team-players {
+      font-size: 13px;
+      line-height: 1.7;
       color: #555;
-      margin-top: 6px;
-    }
-
-    .goal-scorer {
-      font-size: 13px;
-      margin-top: 6px;
-      color: #333;
       text-align: right;
-      line-height: 1.6;
-    }
-
-    .cards {
-      margin-top: 6px;
-      font-size: 18px;
-    }
-
-    /* ------------------- جداول کوچک ------------------- */
-    .effective-container {
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      gap: 20px;
-      margin: 50px auto;
-      max-width: 1000px;
-    }
-
-    .mini-table {
-      width: 300px;
-      background: #fff;
-      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-      border-radius: 12px;
-      overflow: hidden;
-      font-size: 13px;
-    }
-
-    .mini-table caption {
-      background: #3f51b5;
-      color: white;
-      font-weight: bold;
       padding: 10px;
-      font-size: 15px;
-    }
-
-    .mini-table th, .mini-table td {
-      padding: 6px;
-      border: 1px solid #ddd;
-      text-align: center;
-    }
-
-    .mini-table th {
-      background: #f3f3f3;
-      color: #222;
-      font-weight: bold;
+      background: #f4f4f4;
+      border-radius: 10px;
     }
   </style>
+
 </head>
 <body>
 
@@ -195,12 +149,16 @@
 
   <!-- تب ۲: تیم‌ها -->
   <div id="teamsTab" class="tab-content">
+    <h2>📋 جدول تیم‌ها</h2>
     <table id="teamsTable" class="modern-table">
       <thead>
         <tr><th>نام تیم</th><th>سرگروه</th><th>بازیکنان</th></tr>
       </thead>
       <tbody></tbody>
     </table>
+
+    <h2>🏷 نمایش کارت تیم‌ها</h2>
+    <div id="teamCards" class="team-card-container"></div>
   </div>
 
   <h2>📅 بازی‌های آینده</h2>
@@ -237,8 +195,9 @@
     const resultsUrl = "https://docs.google.com/spreadsheets/d/e/2PACX-1vR3XiaUkZP2HEcyJwhjUD-fqU62hsWZdCYoZLRFYaQXefBdIj2Jq_8SjKc6Hvzr9c3bt53Qo36_iycQ/pub?gid=1652426007&single=true&output=csv";
     const effectiveUrl = "https://docs.google.com/spreadsheets/d/e/2PACX-1vR3XiaUkZP2HEcyJwhjUD-fqU62hsWZdCYoZLRFYaQXefBdIj2Jq_8SjKc6Hvzr9c3bt53Qo36_iycQ/pub?gid=99452363&single=true&output=csv";
 
-    /* اگر شیت تیم‌ها داری این خط را تغییر بده */
-    const teamsUrl = "https://docs.google.com/spreadsheets/d/------/pub?output=csv";
+    /* شیت تیم‌ها (اصلاح شده) */
+    const teamsUrl =
+      "https://docs.google.com/spreadsheets/d/e/2PACX-1vR3XiaUkZP2HEcyJwhjUD-fqU62hsWZdCYoZLRFYaQXefBdIj2Jq_8SjKc6Hvzr9c3bt53Qo36_iycQ/pub?gid=136534848&single=true&output=csv";
 
     /* ------------------- مدیریت تب‌ها ------------------- */
     function showTab(tabId) {
@@ -266,17 +225,45 @@
         });
       });
 
-    /* ------------------- تیم‌های ثبت‌نامی ------------------- */
+    /* ------------------- تیم‌ها (جدول + کارت) ------------------- */
     fetch(teamsUrl)
       .then(res => res.text())
       .then(csv => {
+
         const rows = csv.trim().split("\n").map(r => r.split(","));
-        const body = document.querySelector("#teamsTable tbody");
+        const tableBody = document.querySelector("#teamsTable tbody");
+        const cardsContainer = document.getElementById("teamCards");
+
+        tableBody.innerHTML = "";
+        cardsContainer.innerHTML = "";
+
         for (let i = 1; i < rows.length; i++) {
-          const [team, leader, players] = rows[i];
-          body.innerHTML += `<tr><td>${team}</td><td>${leader}</td><td>${players}</td></tr>`;
+          const row = rows[i].map(x => x.trim());
+
+          const team = row[0] || "-";
+          const leader = row[1] || "-";
+          const players = row[2] ? row[2].replace(/;/g, "، ") : "-";
+
+          /* ---- جدول ---- */
+          tableBody.innerHTML += `
+            <tr>
+              <td>${team}</td>
+              <td>${leader}</td>
+              <td>${players}</td>
+            </tr>
+          `;
+
+          /* ---- کارت ---- */
+          cardsContainer.innerHTML += `
+            <div class="team-card">
+              <div class="team-name">${team}</div>
+              <div class="team-leader">سرگروه: ${leader}</div>
+              <div class="team-players">${players}</div>
+            </div>
+          `;
         }
-      });
+      })
+      .catch(err => console.error("❌ خطا در بارگذاری تیم‌ها:", err));
 
     /* ------------------- بازی‌های آینده ------------------- */
     fetch(matchesUrl)
@@ -290,9 +277,9 @@
           const card = document.createElement("div");
           card.className = "card";
           card.innerHTML = `
-            <div class="teams">${team1.trim()} <span class="divider">⚽</span> ${team2.trim()}</div>
-            <div class="match-info">📅 ${date.trim()}</div>
-            <div class="match-info">⏰ ${time.trim()}</div>
+            <div class="teams">${team1} <span class="divider">⚽</span> ${team2}</div>
+            <div class="match-info">📅 ${date}</div>
+            <div class="match-info">⏰ ${time}</div>
           `;
           container.appendChild(card);
         }
@@ -310,11 +297,11 @@
           const card = document.createElement("div");
           card.className = "card";
           card.innerHTML = `
-            <div class="teams">${team1.trim()} ${score1.trim()} <span class="divider">⚽</span> ${score2.trim()} ${team2.trim()}</div>
-            <div class="result-info goal-scorer"><b>${team1.trim()}:</b> ${scorers1 || "-"}</div>
-            ${cards1 ? `<div class="cards">${cards1.trim()}</div>` : ""}
-            <div class="result-info goal-scorer"><b>${team2.trim()}:</b> ${scorers2 || "-"}</div>
-            ${cards2 ? `<div class="cards">${cards2.trim()}</div>` : ""}
+            <div class="teams">${team1} ${score1} ⚽ ${score2} ${team2}</div>
+            <div class="result-info goal-scorer"><b>${team1}:</b> ${scorers1 || "-"}</div>
+            ${cards1 ? `<div class="cards">${cards1}</div>` : ""}
+            <div class="result-info goal-scorer"><b>${team2}:</b> ${scorers2 || "-"}</div>
+            ${cards2 ? `<div class="cards">${cards2}</div>` : ""}
           `;
           container.appendChild(card);
         }
@@ -335,21 +322,21 @@
         });
 
         const scorersBody = document.querySelector("#topScorers tbody");
-        scorers.slice(0, 3).forEach(r => {
-          scorersBody.innerHTML += `<tr><td>${r[1]}</td><td>${r[2]}</td><td>${r[3]}</td></tr>`;
-        });
+        scorers.slice(0, 3).forEach(r =>
+          scorersBody.innerHTML += `<tr><td>${r[1]}</td><td>${r[2]}</td><td>${r[3]}</td></tr>`
+        );
 
         const assistBody = document.querySelector("#topAssist tbody");
-        assist.slice(0, 3).forEach(r => {
-          assistBody.innerHTML += `<tr><td>${r[1]}</td><td>${r[2]}</td><td>${r[3]}</td></tr>`;
-        });
+        assist.slice(0, 3).forEach(r =>
+          assistBody.innerHTML += `<tr><td>${r[1]}</td><td>${r[2]}</td><td>${r[3]}</td></tr>`
+        );
 
         const mvpBody = document.querySelector("#topMVP tbody");
-        mvp.slice(0, 3).forEach(r => {
-          mvpBody.innerHTML += `<tr><td>${r[1]}</td><td>${r[2]}</td><td>${r[3]}</td><td>${r[4]}</td></tr>`;
-        });
+        mvp.slice(0, 3).forEach(r =>
+          mvpBody.innerHTML += `<tr><td>${r[1]}</td><td>${r[2]}</td><td>${r[3]}</td><td>${r[4]}</td></tr>`
+        );
       });
-
   </script>
+
 </body>
 </html>
