--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       display: block;
     }
 
-    /* ------------------- جدول مدرن ------------------- */
+    /* ------------------- جدول‌های مدرن ------------------- */
     table.modern-table {
       margin: 25px auto;
       width: 95%;
@@ -128,9 +128,100 @@
       padding: 10px;
       background: #f4f4f4;
       border-radius: 10px;
+      white-space: pre-line;
+    }
+
+    /* کارت‌ها و جداول بخش‌های دیگر */
+    .card-container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 20px;
+      margin: 40px auto;
+      max-width: 1000px;
+    }
+
+    .card {
+      background: #ffffff;
+      border-radius: 14px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+      width: 280px;
+      padding: 18px;
+      text-align: center;
+      transition: all 0.3s ease;
+    }
+
+    .teams {
+      font-size: 18px;
+      font-weight: bold;
+      color: #3f51b5;
+      margin-bottom: 8px;
+    }
+
+    .divider {
+      font-size: 20px;
+      margin: 0 6px;
+      color: #444;
+    }
+
+    .match-info, .result-info {
+      font-size: 14px;
+      color: #555;
+      margin-top: 6px;
+    }
+
+    .goal-scorer {
+      font-size: 13px;
+      margin-top: 6px;
+      color: #333;
+      text-align: right;
+      line-height: 1.6;
+    }
+
+    .cards {
+      margin-top: 6px;
+      font-size: 18px;
+    }
+
+    /* ------------------- جداول کوچک ------------------- */
+    .effective-container {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 20px;
+      margin: 50px auto;
+      max-width: 1000px;
+    }
+
+    .mini-table {
+      width: 300px;
+      background: #fff;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+      border-radius: 12px;
+      overflow: hidden;
+      font-size: 13px;
+    }
+
+    .mini-table caption {
+      background: #3f51b5;
+      color: white;
+      font-weight: bold;
+      padding: 10px;
+      font-size: 15px;
+    }
+
+    .mini-table th, .mini-table td {
+      padding: 6px;
+      border: 1px solid #ddd;
+      text-align: center;
+    }
+
+    .mini-table th {
+      background: #f3f3f3;
+      color: #222;
+      font-weight: bold;
     }
   </style>
-
 </head>
 <body>
 
@@ -142,22 +233,14 @@
     <button class="tab-btn" onclick="showTab('teamsTab')">👥 تیم‌های ثبت‌نامی</button>
   </div>
 
-  <!-- تب ۱: جدول رده‌بندی -->
+  <!-- تب ۱ -->
   <div id="rankingTab" class="tab-content active">
     <table id="rankingTable" class="modern-table"></table>
   </div>
 
-  <!-- تب ۲: تیم‌ها -->
+  <!-- تب ۲: فقط کارت تیم‌ها -->
   <div id="teamsTab" class="tab-content">
-    <h2>📋 جدول تیم‌ها</h2>
-    <table id="teamsTable" class="modern-table">
-      <thead>
-        <tr><th>نام تیم</th><th>سرگروه</th><th>بازیکنان</th></tr>
-      </thead>
-      <tbody></tbody>
-    </table>
-
-    <h2>🏷 نمایش کارت تیم‌ها</h2>
+    <h2>👥 تیم‌های ثبت‌نامی</h2>
     <div id="teamCards" class="team-card-container"></div>
   </div>
 
@@ -188,155 +271,145 @@
     </table>
   </div>
 
-  <script>
-    /* لینک‌ها */
-    const rankingUrl = "https://docs.google.com/spreadsheets/d/e/2PACX-1vR3XiaUkZP2HEcyJwhjUD-fqU62hsWZdCYoZLRFYaQXefBdIj2Jq_8SjKc6Hvzr9c3bt53Qo36_iycQ/pub?gid=0&single=true&output=csv";
-    const matchesUrl = "https://docs.google.com/spreadsheets/d/e/2PACX-1vR3XiaUkZP2HEcyJwhjUD-fqU62hsWZdCYoZLRFYaQXefBdIj2Jq_8SjKc6Hvzr9c3bt53Qo36_iycQ/pub?gid=1831919756&single=true&output=csv";
-    const resultsUrl = "https://docs.google.com/spreadsheets/d/e/2PACX-1vR3XiaUkZP2HEcyJwhjUD-fqU62hsWZdCYoZLRFYaQXefBdIj2Jq_8SjKc6Hvzr9c3bt53Qo36_iycQ/pub?gid=1652426007&single=true&output=csv";
-    const effectiveUrl = "https://docs.google.com/spreadsheets/d/e/2PACX-1vR3XiaUkZP2HEcyJwhjUD-fqU62hsWZdCYoZLRFYaQXefBdIj2Jq_8SjKc6Hvzr9c3bt53Qo36_iycQ/pub?gid=99452363&single=true&output=csv";
+<script>
 
-    /* شیت تیم‌ها (اصلاح شده) */
-    const teamsUrl =
-      "https://docs.google.com/spreadsheets/d/e/2PACX-1vR3XiaUkZP2HEcyJwhjUD-fqU62hsWZdCYoZLRFYaQXefBdIj2Jq_8SjKc6Hvzr9c3bt53Qo36_iycQ/pub?gid=136534848&single=true&output=csv";
+/* لینک‌ها */
+const rankingUrl = "https://docs.google.com/spreadsheets/d/e/2PACX-1vR3XiaUkZP2HEcyJwhjUD-fqU62hsWZdCYoZLRFYaQXefBdIj2Jq_8SjKc6Hvzr9c3bt53Qo36_iycQ/pub?gid=0&single=true&output=csv";
+const matchesUrl = "https://docs.google.com/spreadsheets/d/e/2PACX-1vR3XiaUkZP2HEcyJwhjUD-fqU62hsWZdCYoZLRFYaQXefBdIj2Jq_8SjKc6Hvzr9c3bt53Qo36_iycQ/pub?gid=1831919756&single=true&output=csv";
+const resultsUrl = "https://docs.google.com/spreadsheets/d/e/2PACX-1vR3XiaUkZP2HEcyJwhjUD-fqU62hsWZdCYoZLRFYaQXefBdIj2Jq_8SjKc6Hvzr9c3bt53Qo36_iycQ/pub?gid=1652426007&single=true&output=csv";
+const effectiveUrl = "https://docs.google.com/spreadsheets/d/e/2PACX-1vR3XiaUkZP2HEcyJwhjUD-fqU62hsWZdCYoZLRFYaQXefBdIj2Jq_8SjKc6Hvzr9c3bt53Qo36_iycQ/pub?gid=99452363&single=true&output=csv";
 
-    /* ------------------- مدیریت تب‌ها ------------------- */
-    function showTab(tabId) {
-      document.querySelectorAll(".tab-btn").forEach(btn => btn.classList.remove("active"));
-      document.querySelectorAll(".tab-content").forEach(tab => tab.classList.remove("active"));
-      event.target.classList.add("active");
-      document.getElementById(tabId).classList.add("active");
+/* شیت تیم‌ها */
+const teamsUrl =
+"https://docs.google.com/spreadsheets/d/e/2PACX-1vR3XiaUkZP2HEcyJwhjUD-fqU62hsWZdCYoZLRFYaQXefBdIj2Jq_8SjKc6Hvzr9c3bt53Qo36_iycQ/pub?gid=136534848&single=true&output=csv";
+
+/* ------------------- مدیریت تب‌ها ------------------- */
+function showTab(tabId) {
+  document.querySelectorAll(".tab-btn").forEach(btn => btn.classList.remove("active"));
+  document.querySelectorAll(".tab-content").forEach(tab => tab.classList.remove("active"));
+  event.target.classList.add("active");
+  document.getElementById(tabId).classList.add("active");
+}
+
+/* ------------------- جدول رده‌بندی ------------------- */
+fetch(rankingUrl)
+  .then(res => res.text())
+  .then(csv => {
+    const rows = csv.trim().split("\n").map(r => r.split(","));
+    const table = document.getElementById("rankingTable");
+
+    rows.forEach((row, i) => {
+      const tr = document.createElement("tr");
+      row.forEach(cell => {
+        const el = document.createElement(i === 0 ? "th" : "td");
+        el.textContent = cell.trim();
+        tr.appendChild(el);
+      });
+      table.appendChild(tr);
+    });
+  });
+
+/* ------------------- تیم‌ها (فقط کارت) ------------------- */
+fetch(teamsUrl)
+  .then(res => res.text())
+  .then(csv => {
+
+    const rows = csv.trim().split("\n").map(r => r.split(","));
+    const cardsContainer = document.getElementById("teamCards");
+
+    cardsContainer.innerHTML = "";
+
+    for (let i = 1; i < rows.length; i++) {
+      const row = rows[i].map(x => x.trim());
+
+      const team = row[0] || "-";
+      const leader = row[1] || "-";
+      const players = row[2] ? row[2].replace(/;/g, "، ") : "-";
+
+      cardsContainer.innerHTML += `
+        <div class="team-card">
+          <div class="team-name">${team}</div>
+          <div class="team-leader">سرگروه: ${leader}</div>
+          <div class="team-players">${players}</div>
+        </div>
+      `;
     }
+  })
+  .catch(err => console.error("❌ خطا در بارگذاری تیم‌ها:", err));
 
-    /* ------------------- جدول رده‌بندی ------------------- */
-    fetch(rankingUrl)
-      .then(res => res.text())
-      .then(csv => {
-        const rows = csv.trim().split("\n").map(r => r.split(","));
-        const table = document.getElementById("rankingTable");
+/* ------------------- بازی‌های آینده ------------------- */
+fetch(matchesUrl)
+  .then(res => res.text())
+  .then(csv => {
+    const rows = csv.trim().split("\n").map(r => r.split(","));
+    const container = document.getElementById("matches");
 
-        rows.forEach((row, i) => {
-          const tr = document.createElement("tr");
-          row.forEach(cell => {
-            const el = document.createElement(i === 0 ? "th" : "td");
-            el.textContent = cell.trim();
-            tr.appendChild(el);
-          });
-          table.appendChild(tr);
-        });
-      });
+    for (let i = 1; i < rows.length; i++) {
+      const [team1, team2, date, time] = rows[i];
+      const card = document.createElement("div");
+      card.className = "card";
+      card.innerHTML = `
+        <div class="teams">${team1} ⚽ ${team2}</div>
+        <div class="match-info">📅 ${date}</div>
+        <div class="match-info">⏰ ${time}</div>
+      `;
+      container.appendChild(card);
+    }
+  });
 
-    /* ------------------- تیم‌ها (جدول + کارت) ------------------- */
-    fetch(teamsUrl)
-      .then(res => res.text())
-      .then(csv => {
+/* ------------------- نتایج ------------------- */
+fetch(resultsUrl)
+  .then(res => res.text())
+  .then(csv => {
+    const rows = csv.trim().split("\n").map(r => r.split(","));
+    const container = document.getElementById("results");
 
-        const rows = csv.trim().split("\n").map(r => r.split(","));
-        const tableBody = document.querySelector("#teamsTable tbody");
-        const cardsContainer = document.getElementById("teamCards");
+    for (let i = 1; i < rows.length; i++) {
+      const [team1, score1, score2, team2, scorers1, scorers2, cards1, cards2] = rows[i];
+      const card = document.createElement("div");
+      card.className = "card";
+      card.innerHTML = `
+        <div class="teams">${team1} ${score1} ⚽ ${score2} ${team2}</div>
+        <div class="result-info goal-scorer"><b>${team1}:</b> ${scorers1 || "-"}</div>
+        ${cards1 ? `<div class="cards">${cards1}</div>` : ""}
+        <div class="result-info goal-scorer"><b>${team2}:</b> ${scorers2 || "-"}</div>
+        ${cards2 ? `<div class="cards">${cards2}</div>` : ""}
+      `;
+      container.appendChild(card);
+    }
+  });
 
-        tableBody.innerHTML = "";
-        cardsContainer.innerHTML = "";
+/* ------------------- بازیکنان مؤثر ------------------- */
+fetch(effectiveUrl)
+  .then(res => res.text())
+  .then(csv => {
+    const rows = csv.trim().split("\n").map(r => r.split(","));
+    const scorers = [], assist = [], mvp = [];
 
-        for (let i = 1; i < rows.length; i++) {
-          const row = rows[i].map(x => x.trim());
+    rows.forEach(r => {
+      const type = r[0].trim();
+      if (type === "گلزن") scorers.push(r);
+      else if (type === "پاسور") assist.push(r);
+      else if (type === "موثر") mvp.push(r);
+    });
 
-          const team = row[0] || "-";
-          const leader = row[1] || "-";
-          const players = row[2] ? row[2].replace(/;/g, "، ") : "-";
+    const scorersBody = document.querySelector("#topScorers tbody");
+    scorers.slice(0, 3).forEach(r =>
+      scorersBody.innerHTML += `<tr><td>${r[1]}</td><td>${r[2]}</td><td>${r[3]}</td></tr>`
+    );
 
-          /* ---- جدول ---- */
-          tableBody.innerHTML += `
-            <tr>
-              <td>${team}</td>
-              <td>${leader}</td>
-              <td>${players}</td>
-            </tr>
-          `;
+    const assistBody = document.querySelector("#topAssist tbody");
+    assist.slice(0, 3).forEach(r =>
+      assistBody.innerHTML += `<tr><td>${r[1]}</td><td>${r[2]}</td><td>${r[3]}</td></tr>`
+    );
 
-          /* ---- کارت ---- */
-          cardsContainer.innerHTML += `
-            <div class="team-card">
-              <div class="team-name">${team}</div>
-              <div class="team-leader">سرگروه: ${leader}</div>
-              <div class="team-players">${players}</div>
-            </div>
-          `;
-        }
-      })
-      .catch(err => console.error("❌ خطا در بارگذاری تیم‌ها:", err));
+    const mvpBody = document.querySelector("#topMVP tbody");
+    mvp.slice(0, 3).forEach(r =>
+      mvpBody.innerHTML += `<tr><td>${r[1]}</td><td>${r[2]}</td><td>${r[3]}</td><td>${r[4]}</td></tr>`
+    );
+  });
 
-    /* ------------------- بازی‌های آینده ------------------- */
-    fetch(matchesUrl)
-      .then(res => res.text())
-      .then(csv => {
-        const rows = csv.trim().split("\n").map(r => r.split(","));
-        const container = document.getElementById("matches");
-
-        for (let i = 1; i < rows.length; i++) {
-          const [team1, team2, date, time] = rows[i];
-          const card = document.createElement("div");
-          card.className = "card";
-          card.innerHTML = `
-            <div class="teams">${team1} <span class="divider">⚽</span> ${team2}</div>
-            <div class="match-info">📅 ${date}</div>
-            <div class="match-info">⏰ ${time}</div>
-          `;
-          container.appendChild(card);
-        }
-      });
-
-    /* ------------------- نتایج ------------------- */
-    fetch(resultsUrl)
-      .then(res => res.text())
-      .then(csv => {
-        const rows = csv.trim().split("\n").map(r => r.split(","));
-        const container = document.getElementById("results");
-
-        for (let i = 1; i < rows.length; i++) {
-          const [team1, score1, score2, team2, scorers1, scorers2, cards1, cards2] = rows[i];
-          const card = document.createElement("div");
-          card.className = "card";
-          card.innerHTML = `
-            <div class="teams">${team1} ${score1} ⚽ ${score2} ${team2}</div>
-            <div class="result-info goal-scorer"><b>${team1}:</b> ${scorers1 || "-"}</div>
-            ${cards1 ? `<div class="cards">${cards1}</div>` : ""}
-            <div class="result-info goal-scorer"><b>${team2}:</b> ${scorers2 || "-"}</div>
-            ${cards2 ? `<div class="cards">${cards2}</div>` : ""}
-          `;
-          container.appendChild(card);
-        }
-      });
-
-    /* ------------------- بازیکنان مؤثر ------------------- */
-    fetch(effectiveUrl)
-      .then(res => res.text())
-      .then(csv => {
-        const rows = csv.trim().split("\n").map(r => r.split(","));
-        const scorers = [], assist = [], mvp = [];
-
-        rows.forEach(r => {
-          const type = r[0].trim();
-          if (type === "گلزن") scorers.push(r);
-          else if (type === "پاسور") assist.push(r);
-          else if (type === "موثر") mvp.push(r);
-        });
-
-        const scorersBody = document.querySelector("#topScorers tbody");
-        scorers.slice(0, 3).forEach(r =>
-          scorersBody.innerHTML += `<tr><td>${r[1]}</td><td>${r[2]}</td><td>${r[3]}</td></tr>`
-        );
-
-        const assistBody = document.querySelector("#topAssist tbody");
-        assist.slice(0, 3).forEach(r =>
-          assistBody.innerHTML += `<tr><td>${r[1]}</td><td>${r[2]}</td><td>${r[3]}</td></tr>`
-        );
-
-        const mvpBody = document.querySelector("#topMVP tbody");
-        mvp.slice(0, 3).forEach(r =>
-          mvpBody.innerHTML += `<tr><td>${r[1]}</td><td>${r[2]}</td><td>${r[3]}</td><td>${r[4]}</td></tr>`
-        );
-      });
-  </script>
+</script>
 
 </body>
 </html>
