--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
   /* لینک شیت نظرات بازیکنان (برای اسلایدر نظرات) */
   // توجه: لینک زیر باید با لینک شیت منتشر شده شما جایگزین شود.
   // شیت باید شامل سه ستون باشد: نظر (متن نظر)، نام (نام بازیکن) و تیم (نام تیم)
-  const commentsUrl = "https://docs.google.com/spreadsheets/d/e/REPLACE_WITH_YOUR_SHEET_ID/pub?gid=0&single=true&output=csv";
+  const commentsUrl = "https://docs.google.com/spreadsheets/d/e/2PACX-1vR3XiaUkZP2HEcyJwhjUD-fqU62hsWZdCYoZLRFYaQXefBdIj2Jq_8SjKc6Hvzr9c3bt53Qo36_iycQ/pub?gid=1054227646&single=true&output=csv";
 
   /* داده‌های نظرات بازیکنان قبل از بازی */
   const commentsData = [
